[package]
name = "bcdl"
description = "Downloads free/name-your-price albums from bandcamp.com"
version = "0.2.0"
edition = "2021"
authors = ["rtldg <rtldg@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rtldg/bcdl"
repository = "https://github.com/rtldg/bcdl"
categories = ["command-line-utilities"]

[dependencies]
anyhow = { version = "1.0.91", features = ["backtrace"] }
bytes = "1.8.0"
clap = { version = "4.5.20", features = ["derive", "env"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
indicatif = "0.17.8"
jiff = "0.1.13"
# rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
scraper = "0.21"
serde_json = "1.0.132"
serde_json_path = "0.7.1"
tokio = { version = "1.41.0", features = ["full"] }
widestring = "1.1.0"

