[package]
name = "bcdl"
description = "Downloads free/name-your-price albums from bandcamp.com"
version = "1.2.0"
edition = "2024"
authors = ["rtldg <rtldg@protonmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rtldg/bcdl"
repository = "https://github.com/rtldg/bcdl"
categories = ["command-line-utilities"]

[profile.release]
lto = true
#strip = true
opt-level = "s"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
futures-util = "0.3"
indicatif = "0.17"
jiff = "0.2"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["http2", "charset", "rustls-tls", "blocking", "json", "stream"] }
scraper = "0.23"
serde_json = "1"
serde_json_path = "0.7"
tokio = { version = "1", features = ["full"] }
widestring = "1"
zip-extract = { version = "0.2.1", features = ["deflate", "time"] }

